<resources>
    <string name="app_name">NutriZulia</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="ingrese_sus_datos">Ingrese sus datos.</string>
    <string name="ingrese_su_cedula">Ingrese su cédula</string>
    <string name="ingrese_su_contrasena">Ingrese su contraseña</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="continuar">Continuar</string>
    <string name="salir">Salir</string>
    <string name="logo">Logo de la Coordinación de Nutrición y Dietetica del Estado Zulia</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inicio">inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="configuracion">Configuración</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_consultas">Consultas</string>
    <string name="menu_pacientes">Pacientes</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="buscar">Buscar</string>
    <string name="ic_content_buscar">Icono de Buscar</string>
    <string name="selecciona_nacionalidad">Nacionalidad *</string>
    <string name="necesitas_ayuda">¿Necesitas ayuda?</string>
    <string name="datos_del_paciente">Datos del paciente</string>
    <string name="debe_completar_los_campos_marcados_con">Debe completar los campos marcados con (*).</string>
    <string name="identificacion">Identificación</string>
    <string name="paciente_cedulado">¿Paciente Cedulado?</string>
    <string name="tipo">Tipo *</string>
    <string name="cedula">Cédula *</string>
    <string name="elegir_identificacion">Elegir identificación *</string>
    <string name="parentesco">Parentesco *</string>
    <string name="designar_representante">Designar representante</string>
    <string name="numero_de_partida_de_nacimiento">Numero de partida de nacimiento *</string>
    <string name="informacion_personal">Información personal</string>
    <string name="primer_nombre">Primer nombre *</string>
    <string name="segundo_nombre">Segundo nombre</string>
    <string name="primer_apellido">Primer apellido *</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento *</string>
    <string name="genero">Género *</string>
    <string name="etnia">Etnia *</string>
    <string name="grupo_sanguineo">Grupo sanguíneo *</string>
    <string name="domicilio">Domicilio</string>
    <string name="estado">Estado *</string>
    <string name="municipio">Municipio *</string>
    <string name="parroquia">Parroquia *</string>
    <string name="informacion_de_contacto">Información de contacto</string>
    <string name="prefijo">Prefijo</string>
    <string name="numero_de_telefono">Número de teléfono</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="limpiar">Limpiar</string>
    <string name="registrar">Registrar</string>
    <string name="agendar">Agendar</string>
    <string name="buscar_paciente">Buscar paciente</string>
    <string name="lista_de_pacientes">Lista de pacientes</string>
    <string name="icono_de_registrar_paciente_nuevo">Icono de registrar paciente nuevo</string>
    <string name="lista_de_consultas">Lista de consultas</string>
    <string name="buscar_consulta">Buscar consulta</string>
    <string name="g_nero">Género</string>
    <string name="desconocido">Desconocido</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="informacion_del_paciente">Información del paciente</string>
    <string name="edad">Edad</string>
    <string name="tipo_de_cita">Tipo de cita *</string>
    <string name="especialidad">Especialidad *</string>
    <string name="motivo">Motivo *</string>
    <string name="fecha_de_la_cita">Fecha de la cita *</string>
    <string name="hora_de_la_cita">Hora de la cita *</string>
    <string name="datos_de_la_cita">Datos de la cita</string>
    <string name="coordinacion_regional">Esta aplicación móvil es una herramienta desarrollada para la Coordinación Regional de Nutrición y Dietética y la Secretaría de Salud del Estado Zulia.</string>
    <string name="version_app">Version 1.0.0</string>
    <string name="manual_de_usuario">Manual de usuario</string>
    <string name="manual_usuario">Para conocer mas sobre la aplicación, descarga nuestro manual de usuario.</string>
    <string name="cuenta">Cuenta</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="ingrese_sus_datos_para_recuperar_la_contrase_a_mediante_su_correo_electronico">Ingrese sus datos para recuperar la contraseña mediante su correo electronico.</string>
    <string name="no_puedes_recuperar_tu_contrase_a">¿No puedes recuperar tu contraseña?</string>
    <string name="recuperar">Recuperar</string>
    <string name="volver">Volver</string>
</resources>