<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_principal"
        android:checkableBehavior="single">
        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/consultasFragment"
            android:icon="@drawable/ic_menu_consultas"
            android:title="@string/menu_consultas" />
        <item
            android:id="@+id/pacientesFragment"
            android:icon="@drawable/ic_menu_pacientes"
            android:title="@string/menu_pacientes" />
        <item
            android:id="@+id/representantesFragment"
            android:icon="@drawable/ic_representantes"
            android:title="@string/menu_representantes" />
        <item
            android:id="@+id/actividadFragment"
            android:icon="@drawable/ic_actividades"
            android:title="@string/actividades" />
        <item
            android:id="@+id/reportesFragment"
            android:icon="@drawable/ic_menu_reportes"
            android:title="@string/menu_reportes" />
        <item
            android:id="@+id/seleccionarInstitucionFragment"
            android:icon="@drawable/ic_menu_instituciones"
            android:title="@string/instituciones" />
        <item
            android:id="@+id/ayudaFragment"
            android:icon="@drawable/ic_menu_ayuda"
            android:title="@string/menu_ayuda" />
    </group>
    <group
        android:id="@+id/menu_secundario"
        android:checkableBehavior="single">
        <item
            android:id="@+id/cuentaFragment"
            android:icon="@drawable/ic_cuenta"
            android:title="@string/cuenta" />
        <item
            android:id="@+id/cerrarSesion"
            android:icon="@drawable/ic_menu_cerrar_sesion"
            android:title="@string/menu_cerrar_sesion" />
        <item
            android:id="@+id/salir"
            android:icon="@drawable/ic_menu_salir"
            android:title="@string/salir" />
    </group>

</menu>