<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="24dp"
    tools:context=".presentation.view.RecuperarClaveFragment">

    <TextView
    android:id="@+id/tvTitulo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:text="@string/app_name"
    android:textSize="20sp"
    android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tvIniciarSesion4"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contrase_a"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/tvIngreseDatos4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ingrese_sus_datos_para_recuperar_la_contrase_a_mediante_su_correo_electronico" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/ingrese_su_cedula"
        app:endIconMode="clear_text"
        app:startIconContentDescription="Icono de cedula"
        app:startIconDrawable="@drawable/ic_cedula">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnNoPuedesRecuperar"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/no_puedes_recuperar_tu_contrase_a" />

    <Button
        android:id="@+id/btnRecuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/recuperar" />

    <Button
        android:id="@+id/btnVolver"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:icon="@drawable/ic_atras" />

</LinearLayout>