<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.view.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/tvIniciarSesion"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <TextView
                android:id="@+id/tvIngreseDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/ingrese_sus_datos"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfTipoCedula"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="4"
                    android:hint="@string/tipo">

                    <AutoCompleteTextView
                        android:id="@+id/autoTipoCedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        app:simpleItems="@array/tiposCedulas"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfCedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:hint="@string/cedula"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiCedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="8" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/ingrese_su_contrasena"
                app:endIconMode="password_toggle"
                app:startIconContentDescription="Icono de contrasena"
                app:startIconDrawable="@drawable/ic_clave">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOlvidasteContrasena"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/olvidaste_tu_contrasena" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/continuar"
                android:textColor="@color/md_theme_onPrimaryContainer"
                app:iconTint="@color/md_theme_onPrimaryContainer"
                app:icon="@drawable/ic_iniciar_sesion"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalir"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salir"
                app:icon="@drawable/ic_atras" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAyuda"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/necesitas_ayuda" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>