<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.ConsultasFragment">

    <!-- NestedScrollingChild goes here (NestedScrollView, RecyclerView, etc.). -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/lista_de_consultas"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- Screen content goes here. -->
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buscar_consulta"
            app:liftOnScroll="true"
            app:liftOnScrollColor="?attr/colorSurfaceContainerHighest" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/buscar_consulta"
        app:layout_anchor="@id/search_bar">

        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->

    </com.google.android.material.search.SearchView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnAgendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription=""
        android:text="@string/agendar"
        app:icon="@drawable/ic_agregar_consulta"/>

    <Button
        android:id="@+id/btnConsultaPendiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Consulta pendiente"
        app:layout_anchor="@+id/nestedScrollView2"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>