<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.SeleccionarPacienteCitaFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPacientes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_paciente" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!-- Resto de tus componentes... -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buscar_paciente"
            app:liftOnScroll="true"
            app:liftOnScrollColor="?attr/colorSurfaceContainerHighest" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/buscar_paciente"
        app:layout_anchor="@id/search_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPacientesFiltrados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_paciente" />

    </com.google.android.material.search.SearchView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnRegistrarPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/icono_de_registrar_paciente_nuevo"
        android:text="@string/registrar"
        app:icon="@drawable/ic_agregar_paciente" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>